crates/service/tests/hover/snapshots/features__hover__type_use_only_func.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(func $func)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
