crates/service/tests/hover/snapshots/features__hover__vec_type.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\nv128\n```\n\nThe type `v128` corresponds to a 128 bit vector of packed integer or floating-point data."
  },
  "range": {
    "start": {
      "line": 2,
      "character": 17
    },
    "end": {
      "line": 2,
      "character": 21
    }
  }
}
